<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:ads="http://schemas.android.com/tools"
    android:fitsSystemWindows="true"
    android:gravity="center"
    android:background="@color/white"
    android:orientation="vertical">
    <!--<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:background="@drawable/act"
        android:layout_height="50dp">
        <ImageView
            android:id="@+id/header_left_btn"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight=".3"
            android:layout_gravity="center"
            android:paddingLeft="@dimen/_10sdp"
         />

        <TextView
            android:id="@+id/header_text"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:gravity="center"
            android:singleLine="true"
            android:text="Login"
            android:textColor="#FFFFFF"
            android:textSize="20sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/aa"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight=".3"
            android:text=" Back"
            android:textColor="#000000" />

    </LinearLayout>
-->
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
      >

        <ImageView
            android:id="@+id/top"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/tv"
            android:layout_gravity="center"

            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <ProgressBar
                android:id="@+id/progressBar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:visibility="gone" />

            <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="fill_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:id="@+id/ll_login"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_horizontal|top"
                    android:gravity="center_horizontal"
                    android:orientation="vertical"

                    android:padding="@dimen/_20sdp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginTop="@dimen/_10sdp"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="@dimen/_150sdp"
                            android:layout_gravity="center_horizontal"
                            android:paddingTop="@dimen/_10sdp"
                            android:src="@drawable/hiten"
                            android:visibility="gone" />
                        <!-- Email Label -->
                        <android.support.design.widget.TextInputLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="8dp"
                            android:layout_marginBottom="8dp"
                            android:theme="@style/TextLabel2">

                            <android.support.design.widget.TextInputEditText
                                android:id="@+id/edt_login_username"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:hint="@string/username"
                                android:inputType="text"
                                android:maxLength="255"
                                android:theme="@style/TextLabel2" />
                        </android.support.design.widget.TextInputLayout>

                        <android.support.design.widget.TextInputLayout
                            android:id="@+id/etPasswordLayout"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="5dp"
                            android:theme="@style/TextLabel2"
                            app:passwordToggleEnabled="true"
                            app:passwordToggleTint="@color/colorPrimary">

                            <android.support.design.widget.TextInputEditText
                                android:id="@+id/etPassword"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:hint="@string/Password"
                                android:maxLength="255"
                                android:inputType="textPassword" />
                        </android.support.design.widget.TextInputLayout>


                        <TextView
                            android:id="@+id/iv_forgot_password"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="right"
                            android:gravity="right"
                            android:src="@drawable/forgot"
                            android:text="Forgot Password ?"
                            android:theme="@style/TextViewBlack"
                            android:visibility="visible" />

                        <LinearLayout
                            android:id="@+id/ll_btn_signIn"
                            android:layout_width="match_parent"
                            android:layout_height="50dp"
                            android:layout_marginTop="@dimen/_11sdp"
                            android:background="@drawable/bg_login1"
                            android:gravity="center"
                            android:orientation="horizontal">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center_vertical"
                                android:text="@string/btnlogin"
                                android:textColor="@color/white"
                                android:textSize="20dp" />

                        </LinearLayout>

                        <LinearLayout
                            android:id="@+id/ll_btn_signUp"
                            android:layout_width="match_parent"
                            android:layout_height="50dp"
                            android:layout_marginTop="@dimen/_20sdp"
                            android:layout_marginBottom="15dp"
                            android:background="@drawable/bg_login1"
                            android:gravity="center"
                            android:visibility="visible">
                            <TextView
                                android:id="@+id/tv_btnTxt"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_centerVertical="true"
                                android:layout_toRightOf="@+id/iv_btnIcon"
                                android:text="@string/btnregister"
                                android:textColor="@color/white"
                                android:textSize="20dp" />
                        </LinearLayout>
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="bottom"
                        android:layout_marginTop="@dimen/_10sdp"
                        android:gravity="bottom"
                        android:orientation="horizontal">
                        <TextView
                            android:id="@+id/txttermndcondition"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="bottom|center_vertical"
                            android:gravity="center"
                            android:text="By logging in,you agree to Movaliya Cable Provider  Terms  Conditions."
                            android:textAlignment="center"
                            android:theme="@style/TextViewBlack"
                             />
                    </LinearLayout>
                </LinearLayout>
            </ScrollView>
        </RelativeLayout>
    </LinearLayout>
</LinearLayout>