<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    xmlns:app="http://schemas.android.com/tools"
    android:fitsSystemWindows="true"
    android:gravity="center"
    android:background="@color/white"
    android:orientation="vertical">
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:background="@drawable/act"
        android:layout_height="50dp">

        <ImageView
            android:id="@+id/header_left_btn"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight=".3"
            android:layout_gravity="center"
            android:paddingLeft="@dimen/_10sdp"
            android:src="@drawable/back_icon"
            />

        <TextView
            android:id="@+id/header_text"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:gravity="center"
            android:layout_gravity="center"
            android:singleLine="true"
            android:text="Reset Password"
            android:textColor="#FFFFFF"
            android:textSize="20sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/aa"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight=".3"
            android:text=" Back"
            android:textColor="#000000" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ProgressBar
                android:id="@+id/progressBar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:visibility="gone"/>

            <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent">

                <LinearLayout
                    android:id="@+id/ll_login"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:paddingLeft="24dp"
                    android:paddingTop="30dp"
                    android:paddingRight="24dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:weightSum="1">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="72dp"
                            android:layout_gravity="center_horizontal"
                            android:layout_marginBottom="24dp"
                            android:src="@drawable/hiten"
                            android:visibility="gone" />
                        <!-- Email Label -->
                        <android.support.design.widget.TextInputLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="8dp"
                            android:layout_marginBottom="8dp"
                            android:theme="@style/TextLabel2">

                            <EditText
                                android:id="@+id/edt_login_email"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:hint="@string/username"
                                android:inputType="textEmailAddress"
                                android:textColor="@color/black" />
                        </android.support.design.widget.TextInputLayout>

                        <RelativeLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="80dp"
                            android:orientation="horizontal">
                            <!-- Password Label -->
                            <android.support.design.widget.TextInputLayout
                                android:id="@+id/etPasswordLayout"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginBottom="5dp"
                                android:theme="@style/TextLabel2"
                                app:passwordToggleEnabled="true"
                                app:passwordToggleTint="@color/colorPrimary">

                                <android.support.design.widget.TextInputEditText
                                    android:id="@+id/etPassword"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:hint="@string/Password"
                                    android:inputType="textPassword"
                                    android:maxLength="255" />
                            </android.support.design.widget.TextInputLayout>
                        </RelativeLayout>

                        <LinearLayout
                            android:id="@+id/ll_btn_signIn"
                            android:layout_width="match_parent"
                            android:layout_height="50dp"
                            android:background="@drawable/bg_login1"
                            android:gravity="center"
                            android:orientation="horizontal">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center_vertical"
                                android:layout_marginRight="@dimen/_12sdp"
                                android:text="Reset Password"
                                android:textColor="@color/white"
                                android:textSize="20dp"
                                android:textStyle="bold" />
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/_10sdp"
                            android:orientation="horizontal"></LinearLayout>

                        <com.google.android.gms.ads.AdView
                            android:id="@+id/adView"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:visibility="visible"
                            ads:adSize="BANNER"
                            ads:adUnitId="@string/banner_home_footer"></com.google.android.gms.ads.AdView>


                    </LinearLayout>
                </LinearLayout>
            </ScrollView>
        </RelativeLayout>

    </LinearLayout>


</LinearLayout>