<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white"
    android:fitsSystemWindows="true"
    android:gravity="center"
    android:orientation="vertical">
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:background="@drawable/act"
        android:layout_height="60dp">
        <ImageView
            android:id="@+id/header_left_btn"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight=".3"
            android:layout_gravity="center"
            android:paddingLeft="@dimen/_10sdp"
            android:src="@drawable/back_icon"
            />
        <TextView
            android:id="@+id/header_text"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:gravity="center"
            android:singleLine="true"
            android:text="Register"
            android:textColor="#FFFFFF"
            android:textSize="20sp"
            android:textStyle="normal" />

        <ImageView
            android:id="@+id/aa"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight=".3"
            android:text=" Back"
            android:textColor="#000000" />

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:fitsSystemWindows="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingLeft="24dp"
                android:paddingTop="30dp"
                android:paddingRight="24dp">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="72dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginBottom="10dp"
                    android:src="@drawable/hiten"
                    android:visibility="gone" />

                <!-- Email Label -->
                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"
                    android:theme="@style/TextLabel2">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/edt_register_email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint=" Email Address"
                        android:inputType="textEmailAddress"
                        android:textColor="@color/black" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"
                    android:theme="@style/TextLabel2">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/edt_register_address"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="Address"
                        android:inputType="textEmailAddress"
                        android:textColor="@color/black" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"
                    android:theme="@style/TextLabel2">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/edt_register_mobile"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/MobileNumber"
                        android:inputType="textEmailAddress|phone"
                        android:textColor="@color/black" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"
                    android:theme="@style/TextLabel2">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/edt_register_username"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="Full Name"
                        android:inputType="textEmailAddress"
                        android:textColor="@color/black" />
                </android.support.design.widget.TextInputLayout>

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/txtscanresult"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="SetTopBoxNumber"
                        android:inputType="textEmailAddress"
                        android:textColor="@color/white"
                        android:textSize="18sp" />
                        <ImageView
                        android:id="@+id/iv_camera"
                        android:layout_width="40dp"
                        android:layout_height="30dp"
                        android:src="@drawable/ic_menu_camera"
                            android:tint="@color/colorPrimary"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        />
                </RelativeLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/etPasswordLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:theme="@style/TextLabel2"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"
                    app:passwordToggleEnabled="true"
                    app:passwordToggleTint="@color/colorPrimary">
                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/etPassword"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/Password"
                        android:inputType="textPassword" />
                </android.support.design.widget.TextInputLayout>
                <!-- Password Label -->
                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:theme="@style/TextLabel2">
                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/etconPassword"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/Password"
                        android:inputType="textPassword"
                        android:textColorHint="@color/black" />
                </android.support.design.widget.TextInputLayout>
                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"
                    android:layout_height="wrap_content"
                    android:theme="@style/TextLabel2">
                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/edt_register_confirmPassword"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="Confirm Password"
                        android:inputType="textPassword"
                        android:textColor="@color/black" />
                </android.support.design.widget.TextInputLayout>

                <RelativeLayout
                    android:id="@+id/rl_btn_signUp"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginTop="@dimen/_30sdp"
                    android:layout_marginBottom="24dp"
                    android:background="@drawable/bg_login1"
                    android:gravity="center">

                    <TextView
                        android:id="@+id/tv_btnTxt"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginRight="@dimen/_10sdp"
                        android:layout_toRightOf="@+id/iv_btnIcon"
                        android:text="@string/btnregister"
                        android:textColor="@color/white"
                        android:textSize="20dp" />
                </RelativeLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:padding="5dp"
                    android:visibility="gone">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingLeft="5dp"
                        android:text="alreday account"
                        android:textStyle="bold"
                        android:theme="@style/TextViewWhite" />
                    <TextView
                        android:id="@+id/tv_signin"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="2dp"
                        android:padding="3dp"
                        android:paddingLeft="5dp"
                        android:text="sign_in"
                        android:textStyle="bold"
                        android:theme="@style/TextViewWhite" />
                </LinearLayout>
                <TextView
                    android:id="@+id/tv_result"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:theme="@style/TextViewWhite" />
            </LinearLayout>
        </ScrollView>
        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:visibility="gone" />
    </RelativeLayout>
</LinearLayout>